# keycloak-fetch-bot

./: .gitignore  MANIFEST.in  README.md  env.env.sample  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/: inject_data.py
.github/workflows/: ci-test.yml
docs/: realm.md
kcfetcher/: main.py
kcfetcher/fetch/: __init__.py  client.py  client_scope.py  component.py  custom_authentication.py  factory.py  generic.py  identity_provider.py  realm.py  role.py  user_federation.py
kcfetcher/store/: store.py
kcfetcher/utils/: __init__.py  helper.py
tests/integration/: test_main.py  test_ping.py
tests/unit/fetch/: test_authentication.py  test_authentication_required_actions.py  test_client.py  test_client_registration_policies.py  test_client_scopes.py  test_components.py  test_factory.py  test_generic.py  test_group.py  test_identity_provider.py  test_realm.py  test_role.py  test_user.py  test_user_federations.py
tests/unit/fetch/cassettes/: TestAuthenticationRequiredActionsFetch.test_fetch_ci0_realm.yaml  TestAuthenticationRequiredActionsFetch.test_fetch_master.yaml  TestClientFetch_vcr.test_fetch.yaml  TestClientRegistrationPolicyFetch.test_fetch.yaml  TestClientScopeFetch.test_fetch.yaml  (+10 more)
tests/unit/fetch/cassettes-kc-1502/: TestClientFetch_vcr.test_fetch.yaml  TestClientScopeFetch.test_fetch.yaml  TestComponentFetch.test_fetch.yaml  TestIdentityProviderFetch.test_fetch.yaml  TestRoleFetch_vcr.test__get_data.yaml  TestUserFetch_vcr.test__get_data.yaml
tests/unit/store/: test_store.py
tests/unit/utils/: test_helper.py
